# tag-python-project

./: .flake8  .mypy.ini  .pre-commit-config.yaml  README.md  action.yaml  pyproject.toml  requirements-dev.txt  tag_python_project.py
