[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tag-python-project"
authors = [{name = "Clément Dubos"}]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">= 3.9"
dependencies = [
    "gitpython==3.1.30",
    "click==8.1.3",
    "pygithub==1.57",
]

[project.scripts]
tag-python-project = "tag_python_project:cli"
